<resources>
    <string name="app_name">m2ng2</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="guest">Guest</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ch_a_c_t_i_kho_n">Chưa có tài khoản?</string>
    <string name="ng_k">Đăng ký</string>
    <string name="t_n_t_i_kho_n">Tên tài khoản</string>
    <string name="nh_p_l_i_m_t_kh_u">Nhập lại mật khẩu</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="th_m_th_lo_i">Thêm thể loại</string>
    <string name="th_lo_i">Thể loại</string>
    <string name="th_m">Thêm</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="t_n_truy_n">Tên truyện</string>
    <string name="truy_n_description">Truyện description</string>
    <string name="th_lo_i_truy_n">Thể loại truyện</string>
    <string name="th_m_truy_n">Thêm truyện</string>
    <string name="example_title">Example Title</string>
    <string name="example_date">Example Date</string>
    <string name="example_desc">lorem ipsum dolor sit amet</string>
    <string name="s_a_truy_n">Sửa truyện</string>
    <string name="s_a">Sửa</string>
    <string name="them_chapter">Thêm chapter</string>
    <string name="t_n_chapter">Tên chapter</string>
    <string name="chapter_1">Chapter 1</string>
    <string name="n_n">N/N</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="truy_n">Truyện</string>
    <string name="theo_d_i">Theo dõi</string>
    <string name="profile">Profile</string>
    <string name="t_n_ng_i_d_ng">Tên người dùng</string>
    <string name="mail">abc@example.com</string>
    <string name="n_a">N/A</string>
    <string name="account">Account</string>
    <string name="member">Member</string>
    <string name="truy_n_theo_d_i">Truyện theo dõi: %d</string>
    <string name="update">Update</string>
    <string name="ng_n_ng">Ngôn ngữ</string>
    <string name="ti_ng_vi_t">Tiếng Việt</string>
    <string name="li_n_h">Liên hệ</string>
    <string name="dat47707_gmail_com">Dat47707@gmail.com</string>
    <string name="t_t_c_truy_n">Tất cả truyện</string>
    <string name="chapter">Chapter</string>
    <string name="b_nh_lu_n">Bình luận</string>
    <string name="ng">Đăng</string>
    <string name="nguy_n_v_n_a">Nguyễn Văn A</string>
    <string name="m_t_c_i_comment_d_i_ngo_ng_n_o_t_user">Một cái comment dài ngoằng nào đó từ user</string>
    <string name="number">number</string>
    <string name="phi_n_b_n">Phiên bản</string>
    <string name="_1_0_0">1.0.0</string>
    <string name="xem_th_m">Xem thêm</string>
    <string name="thu_g_n">Thu gọn</string>
</resources>