<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:padding="10dp">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/them_chapter"
            android:textSize="30sp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">
        <EditText
                android:id="@+id/edtChapterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_edt01"
                android:padding="10dp"
                android:minHeight="48dp"
                android:drawableStart="@drawable/baseline_category_24"
                android:textColorHint="@color/gray01"
                android:drawablePadding="10dp"
                android:hint="@string/t_n_chapter"
                android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false">
        <EditText
                android:id="@+id/edtTruyenCha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_edt01"
                android:padding="10dp"
                android:minHeight="48dp"
                android:drawableStart="@drawable/baseline_category_24"
                android:textColorHint="@color/gray01"
                android:drawablePadding="10dp"
                android:hint="@string/t_n_truy_n"
                android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>
    <ImageButton android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/baseline_attach_file_24"
                 android:background="@android:color/transparent"
                 android:padding="5dp" app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="3dp" app:layout_constraintEnd_toEndOf="parent" android:minHeight="48dp"
                 android:contentDescription="@string/todo" android:id="@+id/chapterPDF"/>
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/th_m"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_btn01" android:id="@+id/btn_themChapter"/>
</LinearLayout>