<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:contentPadding="8dp">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_person_24"
                app:strokeColor="@color/gray01"
                app:strokeWidth="1dp"
                app:shapeAppearanceOverlay="@style/CircleImage"/>
        <TextView
                android:id="@+id/tenUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/avatar"
                android:text="@string/nguy_n_v_n_a"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        <ImageButton
                android:id="@+id/btn_xoaComment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingBottom="20dp"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_delete_outline_24"
                android:contentDescription="@string/todo" android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"/>
        <TextView
                android:id="@+id/commentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tenUser"
                android:text="@string/example_date"
                android:layout_alignParentEnd="true"
                android:textColor="@color/gray02"
                android:layout_marginTop="3dp"
                android:layout_marginStart="15dp"
                android:textSize="12sp"/>
        <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tenUser"
                android:layout_toEndOf="@+id/avatar"
                android:layout_marginTop="5dp"
                android:text="@string/m_t_c_i_comment_d_i_ngo_ng_n_o_t_user"
                android:textColor="@color/gray02"
                android:textSize="12sp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>