<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wall_paper"
        tools:context=".LoginActivity">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="100dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/ng_nh_p"
                    android:textSize="30sp"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_email"
                    app:hintEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/shape_edt01"
                        android:padding="10dp"
                        android:minHeight="48dp"
                        android:drawableStart="@drawable/baseline_email_24"
                        android:textColorHint="@color/gray01"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:drawableStart="@drawable/baseline_password_24"
                        android:textColorHint="@color/gray01"
                        android:drawablePadding="10dp"
                        android:background="@drawable/shape_edt01"
                        android:padding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ng_nh_p"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/ch_a_c_t_i_kho_n"
                    android:textSize="20sp"/>
            <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/ng_k"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>