<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect"
        android:padding="20dp">
    <ImageButton
            android:id="@+id/btnBack1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@color/black" android:contentDescription="@string/todo"/>
    <TextView
            android:id="@+id/commentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/b_nh_lu_n"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/pink1"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            android:textStyle="bold"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnBack1"
            android:hint="@string/b_nh_lu_n"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/baseline_comment_24">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/commentEdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edt01"
                android:inputType="textCapSentences|textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:backgroundTint="@color/pink1"
            android:id="@+id/submitCm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/commentTil"
            android:text="@string/ng"/>
</RelativeLayout>