<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:cardPreventCornerOverlap="false">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <ImageView
                    android:id="@+id/imgTruyen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/test_1"
                    android:contentDescription="@string/todo"/>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:gravity="start|center_vertical">

                <TextView
                        android:id="@+id/tv_tenTruyen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_title"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                <TextView
                        android:id="@+id/tv_ngayDang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/example_date"
                        android:textColor="@color/gray01"
                        android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
