<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray03"
        tools:context=".Fragment.TheLoaiFragment">
    <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:padding="10dp"
            android:textColorHint="#757575"
            android:inputType="text"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            tools:listitem="@layout/layout_theloai"
            android:padding="10dp" android:id="@+id/rvTheLoai"/>
    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:layout_margin="6dp"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:background="@color/gray04"
            android:padding="10dp">

        <Button
                android:id="@+id/btn_themTheLoai"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/th_m_th_lo_i"
                android:drawableLeft="@drawable/tab_the_loai"
                android:background="@drawable/shape_btn01"/>
        <Button
                android:id="@+id/them_truyen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:drawableLeft="@drawable/baseline_book_online_24"
                android:text="@string/th_m_truy_n"

                android:background="@drawable/shape_btn01"/>
    </LinearLayout>

</LinearLayout>
