<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ThemTheLoaiActivity" >
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/wall_paper"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/th_m_th_lo_i"
                android:textSize="30sp"/>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:id="@+id/til_name">
            <EditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_edt01"
                    android:padding="10dp"
                    android:minHeight="48dp"
                    android:drawableStart="@drawable/baseline_category_24"
                    android:textColorHint="@color/gray01"
                    android:drawablePadding="10dp"
                    android:hint="@string/th_lo_i"
                    android:inputType="textPersonName" android:id="@+id/edtTheLoai"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/th_m"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_btn01" android:id="@+id/btn_themTheLoai"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>